Add instructions for installation and configuration, fix previous breakage
* Start document about configuration, listing main settings
* Document the prereqs and steps required for installation
* Simplify how user-defined config settings override default ones, and change
  the test suite accordingly
* Simplify how global config settings are used as fallback from specific ones
* Make image listing work consistently throughout the code
* Add more progress messages describing what is being removed in the case
  of base or final images or containers
* Add purgeall option to remove the base image for everything else, as well
  as all derived images and containers (i.e. everything in all sets)
* Make user-defined config file argument work
* Make mysql user for mariadb have fixed uid/gid in images and containers
* Move invocation of setup_image.py to final image build stage so that it
  is only included in those images, facilitating debugging of the script
* Fix creation of db users specified in per-set section of user config
* Add the phpfpm config files left out of previous commits
* Add my local config file to .gitignore
* Fix echo for motd for containers

--- a/docker_helpers/httpd/html/index.html
+++ b/docker_helpers/httpd/html/index.html
@@ -38,7 +38,7 @@
       <code>docker ls</code> when they are running; the names should be pretty self-explanatory.
     </p>
     <p>
-      To check that the php-fpm container(s) are running properly, you may visit <a href="/hello.php"></a>.
+      To check that the php-fpm container(s) are running properly, you may visit <a href="/hello.php">the hello.php script</a>.
     </p>
     <p>
       This testbed uses the PHP Opcache. If you make live changes to the version of MediaWiki being run in these
